<package>
  <name>rover_jsdrive</name>
  <version>0.1.0</version>
  <description>
      A simple robot drive system that includes skid steering joystick teleoperation, control of a panning servo to look around the robot, and Arduino firmware.
  </description>
  <maintainer email="polatztrk@yahoo.com">Polat Ozturk</maintainer>
  <author email="polatztrk@yahoo.com">Polat Ozturk</author>
  
  <license>Unlicense</license>
  <url type="repository">https://github.com/polatztrk/rover_jsdrive</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
